<resources>
    <string name="app_name">Afriskaut</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Gain access to African player statistics from  \nfootball leagues around the world</string>
    <string name="createAccText">Create an account</string>
    <string name="log_in">Log in</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="select_profession">--Select Profession--</string>
    <string name="already_a_member_sign_in">ALREADY A MEMBER? SIGN IN</string>
    <string name="tos">TERMS OF SERVICE</string>
    <string name="pp">PRIVACY POLICY</string>
    <string name="forgot">Forgot Password</string>
    <string name="please_enter_a_registered_e_mail_address">Please enter a registered e-mail address</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="profile_menu">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_display_picture">Change display picture</string>
    <string name="radar">Radar</string>
    <string name="victor_osimhen">Victor Osimhen</string>
    <string name="back">Back</string>
    <string name="follow">Follow</string>
    <string name="team_statistics">Team Statistics</string>
    <string name="player_statistics">Player Statistics</string>
    <string name="position_">Position:</string>
    <string name="current_club">Current club:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="nationality">Nationality:</string>
    <string name="height">Height:</string>
    <string name="strong_foot">Strong Foot:</string>
    <string name="full_name_">Full Name:</string>
    <string name="player_profile__">Player Profile</string>
    <string name="tournament_statistics">Tournament Statistics</string>
    <string name="season_statistics">Season Statistics</string>
    <string name="all_time_statistics">All Time Statistics</string>
    <string name="club_">CLUB</string>
    <string name="national_">NATIONAL</string>
    <string name="age">Age:</string>
    <string name="statistics">STATISTICS</string>
    <string name="appearances">Appearances</string>
    <string name="_15_">15</string>
    <string name="not_found">This player has not featured for any national team</string>
    <string name="assists">Assists</string>
    <string name="blocks">Blocks</string>
    <string name="captain">Captain</string>
    <string name="acc_cross">Accurate crosses</string>
    <string name="total_crosses">Total crosses</string>
    <string name="dispossesed">Dispossessed</string>
    <string name="att_dribbles">Attempted dribbles</string>
    <string name="succ_dribbles">Successful dribbles</string>
    <string name="dribbles_past">Dribbled past</string>
    <string name="duels_total">Total duels</string>
    <string name="duels_won">Duels won</string>
    <string name="fouls_commited">Fouls committed</string>
    <string name="fouls_drawn">Fouls drawn</string>
    <string name="goals">Goals</string>
    <string name="hitPost">Hit post</string>
    <string name="insideBoxSaves">Inside Box Saves</string>
    <string name="interceptions">Interceptions</string>
    <string name="minutes">Minutes</string>
    <string name="total_passes">Total passes</string>
    <string name="key_passes">Key passes</string>
    <string name="acc_passes">Accurate passes</string>
    <string name="scored_penalties">Penalties scored</string>
    <string name="won_penalties">Penalties won</string>
    <string name="missed_penalties">Penalties missed</string>
    <string name="committed_penalties">Penalties committed</string>
    <string name="saved_penalties">Penalties saved</string>
    <string name="red_cards">Red cards</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="double_yellow">Double Yellow</string>
    <string name="subbed_in">Substituted In</string>
    <string name="subbed_out">Substituted Out</string>
    <string name="subbed_bench">On Bench</string>
    <string name="tackles">Tackles</string>
    <string name="saves">Saves</string>
    <string name="seasons">SEASONS</string>
    <string name="comps">COMPETITIONS</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="weight">Weight:</string>
    <string name="current_password">Current password</string>
    <string name="change_password">Change password</string>
    <string name="age_">Age</string>
    <string name="team_">Team</string>
    <string name="scout">Scout</string>
    <string name="suggestions">Suggestions</string>
    <string name="best_under_19_talent">Top under 19 Talent</string>
    <string name="best_under_21_talent">Top under 21 Talent</string>
    <string name="best_under_23_talent">Top under 23 Talent</string>
    <string name="match_report">Match Report</string>
    <string name="match_param">Match Parameters</string>
    <string name="_7">1</string>
    <string name="shot_stopping">Shot \n Stopping</string>
    <string name="ballcontrol">Ball \n Control</string>
    <string name="finishing">Finishing</string>
    <string name="technique">Technique</string>
    <string name="first_n_touch">First \n Touch</string>
    <string name="heading">Heading</string>
    <string name="composure">Composure</string>
    <string name="passing">Short \nPass</string>
    <string name="victor_n_osimhen_">Victor \nOsimhen</string>
    <string name="decision_n_making">Decision \n Making</string>
    <string name="over">/</string>
    <string name="positioning">Positioning</string>
    <string name="insert_opponent_team">insert opponent team</string>
    <string name="victor_moses__">VICTOR MOSES</string>
    <string name="view_all_match_reports">Match Reports</string>
    <string name="pressing">Pressing</string>
    <string name="long_npass">Long \nPass</string>
    <string name="im_following">Following</string>
    <string name="im_not_following">Follow</string>


</resources>
