<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.activities.account.register.RegisterActivity">

    <data>
        <import type="android.view.View" />

        <variable
            name="navigator"
            type="com.naemo.afriskaut.views.activities.account.register.RegisterNavigator" />

        <variable
            name="viewModel"
            type="com.naemo.afriskaut.views.activities.account.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/register_frame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textStyle="normal"
            android:textColor="@color/colorLoginBtn"
            android:textSize="18sp"
            android:text="@string/createAccText"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/firstName"
                    android:imeOptions="actionNext"
                    android:layout_width="337dp"
                    android:layout_height="60dp"
                    android:inputType="textPersonName"
                    android:hint="@string/first_name"
                    android:fontFamily="@font/montserrat"
                    android:textSize="13sp"
                    android:text="@={viewModel.firstName}"
                    android:textColor="@color/colorHomeText"
                    android:textColorHint="@color/colorHint"
                    android:textStyle="italic"
                    android:background="@drawable/rounded_field"
                    android:paddingStart="15dp" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/lastName"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="15dp"
                    android:layout_width="337dp"
                    android:layout_height="60dp"
                    android:inputType="textPersonName"
                    android:hint="@string/last_name"
                    android:textSize="13sp"
                    android:fontFamily="@font/montserrat"
                    android:text="@={viewModel.lastName}"
                    android:textColor="@color/colorHomeText"
                    android:textColorHint="@color/colorHint"
                    android:textStyle="italic"
                    android:background="@drawable/rounded_field"
                    android:paddingStart="15dp" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/email"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="15dp"
                    android:layout_width="337dp"
                    android:layout_height="60dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/e_mail"
                    android:textSize="13sp"
                    android:fontFamily="@font/montserrat"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/colorHomeText"
                    android:textColorHint="@color/colorHint"
                    android:textStyle="italic"
                    android:background="@drawable/rounded_field"
                    android:paddingStart="15dp" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/password"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="15dp"
                    android:layout_width="337dp"
                    android:layout_height="60dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="13sp"
                    android:fontFamily="@font/montserrat"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/colorHomeText"
                    android:textColorHint="@color/colorHint"
                    android:textStyle="italic"
                    android:background="@drawable/rounded_field"
                    android:paddingStart="15dp" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/confirm_password"
                    android:imeOptions="actionDone"
                    android:layout_marginTop="15dp"
                    android:layout_width="337dp"
                    android:layout_height="60dp"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:fontFamily="@font/montserrat"
                    android:textSize="13sp"
                    android:text="@={viewModel.confirmPassword}"
                    android:textColor="@color/colorHomeText"
                    android:textColorHint="@color/colorHint"
                    android:textStyle="italic"
                    android:background="@drawable/rounded_field"
                    android:paddingStart="15dp" />

                <FrameLayout
                    android:layout_gravity="center"
                    android:layout_width="337dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_field">

                    <Spinner
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/role"
                        android:fontFamily="@font/montserrat"
                        android:imeOptions="actionDone"
                        android:textColorHint="@color/colorHint"
                        android:textSize="13sp" />
                </FrameLayout>

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/register_button"
                    android:layout_width="338dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_round_button"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:onClick="@{(view) -> navigator.sendRegister()}"
                    android:text="@string/submit"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLoginBtn"
                    android:textStyle="normal"
                    android:textSize="14sp"
                    android:text="@string/already_a_member_sign_in"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:onClick="@{(view) -> navigator.goToLogin()}" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLoginBtn"
                        android:textStyle="normal"
                        android:textSize="12sp"
                        android:text="@string/tos"
                        android:layout_gravity="bottom|start"
                        android:onClick="@{(view) -> navigator.goToTos()}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/pp"
                        android:textColor="@color/colorLoginBtn"
                        android:textSize="12sp"
                        android:textStyle="normal" />

                </LinearLayout>



            </LinearLayout>



        </androidx.core.widget.NestedScrollView>



    </LinearLayout>

</layout>
