<?xml version="1.0" encoding="utf-8"?>
<layout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.fragments.player.pickstats.PickStatsFragment">

    <data>
        <import type="android.view.View" />

        <variable
            name="navigator"
            type="com.naemo.afriskaut.views.fragments.player.pickstats.PickStatsNavigator" />

        <variable
            name="viewModel"
            type="com.naemo.afriskaut.views.fragments.player.pickstats.PickStatsViewModel" />
    </data>


    <LinearLayout

        android:id="@+id/stats_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPlayerBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:onClick="@{(view) -> navigator.goBack()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back_button"
                android:drawableStart="@drawable/ic_back"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:layout_margin="30dp"
                android:textStyle="normal"
                android:fontFamily="@font/montserrat"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Player Statistics"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:textStyle="normal"
                android:textSize="12sp" />

        </LinearLayout>


        <Button
            android:onClick="@{(view) -> navigator.goToTeamStats()}"
            android:layout_width="315dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:id="@+id/team_stats"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:text="@string/team_statistics"
            android:background="@drawable/stats_button" />

        <Button
            android:onClick="@{(view) -> navigator.goToTournamentStats()}"
            android:layout_width="315dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:text="@string/tournament_statistics"
            android:background="@drawable/stats_button" />

        <Button
            android:onClick="@{(view) -> navigator.goToSeasonStats()}"
            android:layout_width="315dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:text="@string/season_statistics"
            android:background="@drawable/stats_button" />

        <Button
            android:onClick="@{(view) -> navigator.goToAllTimeStats()}"
            android:layout_width="315dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:text="@string/all_time_statistics"
            android:background="@drawable/stats_button" />



    </LinearLayout>


</layout>
